added image to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<img src="default-avatar.png" width="150px" height="150px"/>
 <h1>Jakub Krzysztof Dolecki</h1>
 <span>Frontend Developer</span>
 <p>
