--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <img src="default-avatar.png" width="150px" height="150px"/>
-<h1>Jakub Krzysztof Dolecki</h1>
-<span>Frontend Developer</span>
+<h1 style="font-size: 36px">Jakub Krzysztof Dolecki</h1>
+<span style="color:grey">Frontend Developer</span>
 <p>
     Mam na imię <b>Jakub</b>
     Właśnie jestem w trakcie nauki języku programowania html.
@@ -8,15 +8,15 @@
     Do tego pracowałem jako samochodowy dostawca jedzenia a
     obecnie pracuję w wypożyczalni samochodów Kaizen-Rent.
 </p>
-<h2>Doświadczenie zawodowe</h2>
+<h2 style="font-size: 28px">Doświadczenie zawodowe</h2>
 <ul>
     <li>2018-2021 Dostawca jedzenia w firmie wolt</li>
     <li>2021-2022 Dostawca jedzenia w KFC morena Gdańsk</li>
     <li>2022-Teraz Przedstawiciel wypożyczalni samochodów Kaizen Rent</li>
 </ul>
-<h2>Wykształcenie</h2>
+<h2 style="font-size: 28px">Wykształcenie</h2>
 <ul>
     <li>2015-2018 <a href="https://sto2.com.pl">II Podstawowo – Gimnazjalny Zespół Szkół Społecznych STO</a></li>
     <li>2018-2021 <a href="https://www.xxlo.pl">XX Liceum Ogólnokształcące im. Zbigniewa Herberta w Gdańsku</a> </li>
 </ul>
-<h2>Zainteresowania</h2>
+<h2 style="font-size: 28px">Zainteresowania</h2>
