added image size to head and moved to css file

--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
 
 <head>
     <title>Jakub Dolecki - CV</title>
-    <style>
-        h2 {font-size: 28px}
-        h1 {font-size: 36px}
-        span {color: grey}
-    </style>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
-    <img src="default-avatar.png" width="150px" height="150px" />
+    <img src="default-avatar.png"/>
     <h1>Jakub Krzysztof Dolecki</h1>
     <span>Frontend Developer</span>
     <p>
