Chenged O mnie section in index html and style.css

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <h2>O mnie</h2>
             <p>
                 Mam na imię <b>Jakub</b>
-                Właśnie jestem w trakcie nauki języku programowania html.
-                Wcześniej studiowałem produkcje form audio-wizualnych na ug.
+                Właśnie jestem w trakcie nauki języku programowania <a href="https://pl.wikipedia.org/wiki/HTML">html</a>.
+                Wcześniej studiowałem <i>produkcje form audio-wizualnych</i> na ug.
                 Do tego pracowałem jako samochodowy dostawca jedzenia a
                 obecnie pracuję w wypożyczalni samochodów Kaizen-Rent.
             </p>
