added contact information and adjusted positioning

--- a/index.html
+++ b/index.html
@@ -10,16 +10,27 @@
 
     <header>
         <img src="default-avatar.png" />
-        <h1>Jakub Krzysztof Dolecki</h1>
-        <span>Frontend Developer</span>
+        <div>
+            <h1>Jakub Krzysztof Dolecki</h1>
+            <span>Frontend Developer</span>
+        </div>
+        <address>
+            <ul>
+                <li>Numer telefonu: 786255682</li>
+                <li>Email: k.dolo123@gmail.com</li>
+                <li>Data urodzenia: 26-04-2002</li>
+                <li>Miejsce zamieszkania: Gdańsk</li>
+            </ul>
+        </address>
     </header>
-    
+
     <main>
         <section>
             <h2>O mnie</h2>
             <p>
                 Mam na imię <b>Jakub</b>
-                Właśnie jestem w trakcie nauki języku programowania <a href="https://pl.wikipedia.org/wiki/HTML">html</a>.
+                Właśnie jestem w trakcie nauki języku programowania <a
+                    href="https://pl.wikipedia.org/wiki/HTML">html</a>.
                 Wcześniej studiowałem <i>produkcje form audio-wizualnych</i> na ug.
                 Do tego pracowałem jako samochodowy dostawca jedzenia a
                 obecnie pracuję w wypożyczalni samochodów Kaizen-Rent.
