added icons next to contact info

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </div>
         <address>
             <ul>
-                <li>Numer telefonu: 786255682</li>
-                <li>Email: k.dolo123@gmail.com</li>
-                <li>Data urodzenia: 26-04-2002</li>
-                <li>Miejsce zamieszkania: Gdańsk</li>
+                <li><img src="phone.png"/><b>Numer telefonu:</b> 786255682</li>
+                <li><img src="mail.png"/><b>Email:</b> k.dolo123@gmail.com</li>
+                <li><img src="birthday-cake.png"/><b>Data urodzenia:</b> 26-04-2002</li>
+                <li><img src="pin.png"/><b>Miejsce zamieszkania:</b> Gdańsk</li>
             </ul>
         </address>
     </header>
