--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
 
     <header>
-        <img src="default-avatar.png" />
+        <img class="profile-picture circle" src="default-avatar.png" />
         <div>
             <h1>Jakub Krzysztof Dolecki</h1>
             <span>Frontend Developer</span>
         </div>
         <address>
             <ul>
-                <li><img src="phone.png"/><b>Numer telefonu:</b> 786255682</li>
-                <li><img src="mail.png"/><b>Email:</b> k.dolo123@gmail.com</li>
-                <li><img src="birthday-cake.png"/><b>Data urodzenia:</b> 26-04-2002</li>
-                <li><img src="pin.png"/><b>Miejsce zamieszkania:</b> Gdańsk</li>
+                <li><img class="address-icon circle" src="phone.png" /><b>Numer telefonu:</b> 786255682</li>
+                <li><img class="address-icon circle" src="mail.png" /><b>Email:</b> k.dolo123@gmail.com</li>
+                <li><img class="address-icon circle" src="birthday-cake.png" /><b>Data urodzenia:</b> 26-04-2002</li>
+                <li><img class="address-icon circle" src="pin.png" /><b>Miejsce zamieszkania:</b> Gdańsk</li>
             </ul>
         </address>
     </header>
@@ -68,11 +68,35 @@
 
         <section>
             <h2>Zainteresowania</h2>
-            <ul>
-                <li>Gry Komputerowe</li>
-                <li>Motoryzacja</li>
-                <li>Nowe Technologie</li>
-                <li>Sporty Zimowe</li>
+            <ul class="hobbies">
+                <li>
+                    <img src="pad.png.png" />
+                    <div>
+                        <h3>Gry Komputerowe</h3>
+                        <p>Ostatnim czasem gram głównie w Call Of Duty.</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="auto.png.png" />
+                    <div>
+                        <h3>Motoryzacja</h3>
+                        <p>Od dziecke interesuję się motoryzacją wszelkiej maści.</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="technologia.png.png" />
+                    <div>
+                        <h3>Nowe Technologie</h3>
+                        <p>Co tydzień oglądam tech week, kocham nowe technologie.</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="zima.png.png" />
+                    <div>
+                        <h3>Sporty Zimowe</h3>
+                        <p>Już gdy miałem 3 lata mój tata zabierał mnie w góry.</p>
+                    </div>
+                </li>
             </ul>
         </section>
     </main>
