added style and animation to download link

--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
         <div>
             <h1>Jakub Krzysztof Dolecki</h1>
             <span>Frontend Developer</span>
+            <div>
+                <a class="cv-download-link"
+                    href="https://store4.gofile.io/download/6b3d068a-d503-4922-848d-21a2a83fd1f3/cv%20Jakub%20Dolecki.pdf">Pobierz
+                    CV</a>
+            </div>
         </div>
         <address>
             <ul>
-                <li><img class="address-icon circle" src="phone.png" /><b>Numer telefonu:</b> 786255682</li>
-                <li><img class="address-icon circle" src="mail.png" /><b>Email:</b> k.dolo123@gmail.com</li>
+                <li><img class="address-icon circle" src="phone.png" /><b>Numer telefonu:</b> <a
+                        href="tel:786255682">786255682</a></li>
+                <li><img class="address-icon circle" src="mail.png" /><b>Email:</b> <a
+                        href="mailto:k.dolo123@gmail.com">k.dolo123@gmail.com</a></li>
                 <li><img class="address-icon circle" src="birthday-cake.png" /><b>Data urodzenia:</b> 26-04-2002</li>
                 <li><img class="address-icon circle" src="pin.png" /><b>Miejsce zamieszkania:</b> Gdańsk</li>
             </ul>
@@ -41,9 +48,10 @@
         <section>
             <h2>Doświadczenie zawodowe</h2>
             <ul>
-                <li>2018-2021 Dostawca jedzenia w firmie wolt</li>
-                <li>2021-2022 Dostawca jedzenia w KFC morena Gdańsk</li>
-                <li>2022-Teraz Przedstawiciel wypożyczalni samochodów Kaizen Rent</li>
+                <li>2018-2021 <a href="https://wolt.com/pl/pol/warsaw">Dostawca jedzenia w firmie wolt</a></li>
+                <li>2021-2022 <a href="https://kfc.pl">Dostawca jedzenia w KFC morena Gdańsk</a></li>
+                <li>2022-Teraz <a href="https://kaizenrent.pl">Przedstawiciel wypożyczalni samochodów Kaizen Rent</a>
+                </li>
             </ul>
         </section>
 
