--- a/index.html
+++ b/index.html
@@ -7,108 +7,111 @@
 </head>
 
 <body>
-
-    <header>
-        <img class="profile-picture circle" src="default-avatar.png" />
-        <div>
-            <h1>Jakub Krzysztof Dolecki</h1>
-            <span>Frontend Developer</span>
+    <div class="container">
+        <header>
+            <img class="profile-picture circle" src="default-avatar.png" />
             <div>
-                <a class="cv-download-link"
-                    href="https://store4.gofile.io/download/6b3d068a-d503-4922-848d-21a2a83fd1f3/cv%20Jakub%20Dolecki.pdf">Pobierz
-                    CV</a>
+                <h1>Jakub Krzysztof Dolecki</h1>
+                <span>Frontend Developer</span>
+                <div>
+                    <a class="cv-download-link"
+                        href="https://store4.gofile.io/download/6b3d068a-d503-4922-848d-21a2a83fd1f3/cv%20Jakub%20Dolecki.pdf">Pobierz
+                        CV</a>
+                </div>
             </div>
-        </div>
-        <address>
-            <ul>
-                <li><img class="address-icon circle" src="phone.png" /><b>Numer telefonu:</b> <a
-                        href="tel:786255682">786255682</a></li>
-                <li><img class="address-icon circle" src="mail.png" /><b>Email:</b> <a
-                        href="mailto:k.dolo123@gmail.com">k.dolo123@gmail.com</a></li>
-                <li><img class="address-icon circle" src="birthday-cake.png" /><b>Data urodzenia:</b> 26-04-2002</li>
-                <li><img class="address-icon circle" src="pin.png" /><b>Miejsce zamieszkania:</b> Gdańsk</li>
-            </ul>
-        </address>
-    </header>
+            <address>
+                <ul>
+                    <li><img class="address-icon circle" src="phone.png" /><b>Numer telefonu:</b> <a
+                            href="tel:786255682">786255682</a></li>
+                    <li><img class="address-icon circle" src="mail.png" /><b>Email:</b> <a
+                            href="mailto:k.dolo123@gmail.com">k.dolo123@gmail.com</a></li>
+                    <li><img class="address-icon circle" src="birthday-cake.png" /><b>Data urodzenia:</b> 26-04-2002
+                    </li>
+                    <li><img class="address-icon circle" src="pin.png" /><b>Miejsce zamieszkania:</b> Gdańsk</li>
+                </ul>
+            </address>
+        </header>
 
-    <main>
-        <section>
-            <h2>O mnie</h2>
-            <p>
-                Mam na imię <b>Jakub</b>
-                Właśnie jestem w trakcie nauki języku programowania <a
-                    href="https://pl.wikipedia.org/wiki/HTML">html</a>.
-                Wcześniej studiowałem <i>produkcje form audio-wizualnych</i> na ug.
-                Do tego pracowałem jako samochodowy dostawca jedzenia a
-                obecnie pracuję w wypożyczalni samochodów Kaizen-Rent.
-            </p>
-        </section>
+        <main>
+            <section>
+                <h2>O mnie</h2>
+                <p>
+                    Mam na imię <b>Jakub</b>
+                    Właśnie jestem w trakcie nauki języku programowania <a
+                        href="https://pl.wikipedia.org/wiki/HTML">html</a>.
+                    Wcześniej studiowałem <i>produkcje form audio-wizualnych</i> na ug.
+                    Do tego pracowałem jako samochodowy dostawca jedzenia a
+                    obecnie pracuję w wypożyczalni samochodów Kaizen-Rent.
+                </p>
+            </section>
 
 
-        <section>
-            <h2>Doświadczenie zawodowe</h2>
-            <ul>
-                <li>2018-2021 <a href="https://wolt.com/pl/pol/warsaw">Dostawca jedzenia w firmie wolt</a></li>
-                <li>2021-2022 <a href="https://kfc.pl">Dostawca jedzenia w KFC morena Gdańsk</a></li>
-                <li>2022-Teraz <a href="https://kaizenrent.pl">Przedstawiciel wypożyczalni samochodów Kaizen Rent</a>
-                </li>
-            </ul>
-        </section>
+            <section>
+                <h2>Doświadczenie zawodowe</h2>
+                <ul>
+                    <li>2018-2021 <a href="https://wolt.com/pl/pol/warsaw">Dostawca jedzenia w firmie wolt</a></li>
+                    <li>2021-2022 <a href="https://kfc.pl">Dostawca jedzenia w KFC morena Gdańsk</a></li>
+                    <li>2022-Teraz <a href="https://kaizenrent.pl">Przedstawiciel wypożyczalni samochodów Kaizen
+                            Rent</a>
+                    </li>
+                </ul>
+            </section>
 
-        <section>
-            <h2>Języki</h2>
-            <ul>
-                <li>Angielski</li>
-                <li>Polski</li>
-            </ul>
-        </section>
+            <section>
+                <h2>Języki</h2>
+                <ul>
+                    <li>Angielski</li>
+                    <li>Polski</li>
+                </ul>
+            </section>
 
-        <section>
-            <h2>Wykształcenie</h2>
-            <ul>
-                <li>2015-2018 <a href="https://sto2.com.pl">II Podstawowo – Gimnazjalny Zespół Szkół Społecznych STO</a>
-                </li>
-                <li>2018-2021 <a href="https://www.xxlo.pl">XX Liceum Ogólnokształcące im. Zbigniewa Herberta w
-                        Gdańsku</a>
-                </li>
-            </ul>
-        </section>
+            <section>
+                <h2>Wykształcenie</h2>
+                <ul>
+                    <li>2015-2018 <a href="https://sto2.com.pl">II Podstawowo – Gimnazjalny Zespół Szkół Społecznych
+                            STO</a>
+                    </li>
+                    <li>2018-2021 <a href="https://www.xxlo.pl">XX Liceum Ogólnokształcące im. Zbigniewa Herberta w
+                            Gdańsku</a>
+                    </li>
+                </ul>
+            </section>
 
-        <section>
-            <h2>Zainteresowania</h2>
-            <ul class="hobbies">
-                <li>
-                    <img src="pad.png.png" />
-                    <div>
-                        <h3>Gry Komputerowe</h3>
-                        <p>Ostatnim czasem gram głównie w Call Of Duty.</p>
-                    </div>
-                </li>
-                <li>
-                    <img src="auto.png.png" />
-                    <div>
-                        <h3>Motoryzacja</h3>
-                        <p>Od dziecke interesuję się motoryzacją wszelkiej maści.</p>
-                    </div>
-                </li>
-                <li>
-                    <img src="technologia.png.png" />
-                    <div>
-                        <h3>Nowe Technologie</h3>
-                        <p>Co tydzień oglądam tech week, kocham nowe technologie.</p>
-                    </div>
-                </li>
-                <li>
-                    <img src="zima.png.png" />
-                    <div>
-                        <h3>Sporty Zimowe</h3>
-                        <p>Już gdy miałem 3 lata mój tata zabierał mnie w góry.</p>
-                    </div>
-                </li>
-            </ul>
-        </section>
-    </main>
-
+            <section>
+                <h2>Zainteresowania</h2>
+                <ul class="hobbies">
+                    <li>
+                        <img src="pad.png.png" />
+                        <div>
+                            <h3>Gry Komputerowe</h3>
+                            <p>Ostatnim czasem gram głównie w Call Of Duty.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="auto.png.png" />
+                        <div>
+                            <h3>Motoryzacja</h3>
+                            <p>Od dziecke interesuję się motoryzacją wszelkiej maści.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="technologia.png.png" />
+                        <div>
+                            <h3>Nowe Technologie</h3>
+                            <p>Co tydzień oglądam tech week, kocham nowe technologie.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="zima.png.png" />
+                        <div>
+                            <h3>Sporty Zimowe</h3>
+                            <p>Już gdy miałem 3 lata mój tata zabierał mnie w góry.</p>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+        </main>
+    </div>
 </body>
 
 </html>
